@@ -1,4 +1,3 @@
-# $Id: Makefile 158 2004-10-01 03:45:15Z PoW $
 
 CC = gcc -pipe
 # CC = gcc -pipe -x c++
