@@ -327,7 +327,7 @@ struct map_session_data {
 	int last_skillid,last_skilllv;		// Added by RoVeRT
 	
 	unsigned char change_level; // [celest]
-        unsigned int alive_timer; //[Valaris]
+        int alive_timer; //[Valaris]
 
 #ifndef TXT_ONLY
 	int mail_counter;	// mail counter for mail system [Valaris]
